--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/qt_dotgraph
-	previous = 
-	base = fc40638
+	previous = fc40638
+	base = 554c5a7
 	trim = 
 	trimbase = 
