--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/eloquent/qt_dotgraph
-	previous = 
-	base = 5245bc3
+	previous = 5245bc3
+	base = 2d6339a
 	trim = 
 	trimbase = 
