--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/qt_gui_app
-	previous = 
-	base = c324e0f
+	previous = c324e0f
+	base = 55a2453
 	trim = 
 	trimbase = 
