--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/eloquent/qt_gui_app
-	previous = 
-	base = ce957cd
+	previous = ce957cd
+	base = 4d4f87e
 	trim = 
 	trimbase = 
