--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/qt_gui_core
-	previous = 
-	base = c0eb86e
+	previous = c0eb86e
+	base = 8ee86c5
 	trim = 
 	trimbase = 
