--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/eloquent/qt_gui_core
-	previous = 
-	base = ff5ca1c
+	previous = ff5ca1c
+	base = fe70fb2
 	trim = 
 	trimbase = 
