--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/qt_gui
-	previous = 
-	base = d07b898
+	previous = d07b898
+	base = 66e6ac1
 	trim = 
 	trimbase = 
