--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/eloquent/qt_gui
-	previous = 
-	base = 9293627
+	previous = 9293627
+	base = dfcd724
 	trim = 
 	trimbase = 
