--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/qt_gui_py_common
-	previous = 
-	base = 689d9c9
+	previous = 689d9c9
+	base = 43c6034
 	trim = 
 	trimbase = 
