--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/eloquent/qt_gui_py_common
-	previous = 
-	base = 890b1c3
+	previous = 890b1c3
+	base = cc2474e
 	trim = 
 	trimbase = 
