--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/qt_gui_cpp
-	previous = 
-	base = cd5ff9b
+	previous = cd5ff9b
+	base = bb39475
 	trim = 
 	trimbase = 
