--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/eloquent/qt_gui_cpp
-	previous = 
-	base = de690e1
+	previous = de690e1
+	base = 05438bd
 	trim = 
 	trimbase = 
